kyverno-hd-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsigned-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unsigned-app
  template:
    metadata:
      labels:
        app: unsigned-app
    spec:
      containers:
        - name: unsigned-container
          image: nginx:latest
